@@ -176,7 +176,7 @@ class tx_dam_cmd_filedelete extends t3lib_extobjbase {
 
 		$content = '';
 
-
+		$this->pObj->markers['FOLDER_INFO'] = 'File: ' . $filepath;
 		if ($meta['uid']) {
 			$references = tx_dam_guiFunc::getReferencesTable($meta['uid']);
 			if ($references) {
@@ -200,12 +200,10 @@ class tx_dam_cmd_filedelete extends t3lib_extobjbase {
 		$msg[] = '&nbsp;';
 		$msg[] = $LANG->getLL('tx_dam_cmd_filedelete.message',1);
 
-		$buttons = '
-			<input type="hidden" name="data[delete]['.$id.'][data]" value="'.htmlspecialchars($filepath).'" />
-			<input type="submit" value="'.$LANG->getLL('tx_dam_cmd_filedelete.submit',1).'" />
-			<input type="submit" value="'.$LANG->sL('LLL:EXT:lang/locallang_core.xml:labels.cancel',1).'" onclick="jumpBack(); return false;" />';
+		$this->pObj->docHeaderButtons['SAVE'] = '<input class="c-inputButton" name="_savedok"' . t3lib_iconWorks::skinImg($this->pObj->doc->backPath, 'gfx/deletedok.gif') . ' title="' . $LANG->getLL('tx_dam_cmd_filedelete.submit',1) . '" height="16" type="image" width="16">';
+		$this->pObj->docHeaderButtons['CLOSE'] = '<a href="#" onclick="jumpBack(); return false;"><img' . t3lib_iconWorks::skinImg($this->pObj->doc->backPath, 'gfx/closedok.gif') . ' class="c-inputButton" title="'.$LANG->sL('LLL:EXT:lang/locallang_core.xml:labels.cancel',1).'" alt="" height="16" width="16"></a>';			
 
-
+		$content .= '<input type="hidden" name="data[delete]['.$id.'][data]" value="'.htmlspecialchars($filepath).'" />';
 		$content .= $GLOBALS['SOBE']->getMessageBox ($GLOBALS['SOBE']->pageTitle, $msg, $buttons, 1);
 
 		$content .= $GLOBALS['SOBE']->doc->spacer(5);
