@@ -148,20 +148,19 @@ class tx_dam_cmd_folderdelete extends t3lib_extobjbase {
 		} else {
 
 			$msg = array();
-			$msg[] = tx_dam_guiFunc::getFolderInfoBar($this->folder);
+			$this->pObj->markers['FOLDER_INFO'] = tx_dam_guiFunc::getFolderInfoBar($this->folder);
 			$msg[] = '&nbsp;';
 			if (!$this->path_isEmpty ($this->folder['dir_path_absolute'])) {
 				$msg[] = '<strong><span class="typo3-red">'.$LANG->getLL('labelWarning',1).'</span> '.$LANG->getLL('tx_dam_cmd_folderdelete.messageRecursive',1).'</strong>';
 			}
 			$msg[] = sprintf($LANG->sL('LLL:EXT:lang/locallang_core.xml:mess.delete',1),$this->folder['dir_path_relative']);
 
-			$buttons = '
-					<input type="submit" value="'.$LANG->sL('LLL:EXT:lang/locallang_core.xml:cm.delete',1).'" />
-					<input type="submit" value="'.$LANG->sL('LLL:EXT:lang/locallang_core.xml:labels.cancel',1).'" onclick="jumpBack(); return false;" />
-					<input type="hidden" name="folder" value="'.$this->folder['dir_path_absolute'].'" />
-					<input type="hidden" name="data[delete_confirmed]" value="1" />';
+			$this->pObj->docHeaderButtons['SAVE'] = '<input class="c-inputButton" name="_savedok"' . t3lib_iconWorks::skinImg($this->pObj->doc->backPath, 'gfx/deletedok.gif') . ' title="' . $LANG->sL('LLL:EXT:lang/locallang_core.xml:cm.delete',1) . '" height="16" type="image" width="16">';
+			$this->pObj->docHeaderButtons['CLOSE'] = '<a href="#" onclick="jumpBack(); return false;"><img' . t3lib_iconWorks::skinImg($this->pObj->doc->backPath, 'gfx/closedok.gif') . ' class="c-inputButton" title="'.$LANG->sL('LLL:EXT:lang/locallang_core.xml:labels.cancel',1).'" alt="" height="16" width="16"></a>';			
 
 			$content .= $GLOBALS['SOBE']->getMessageBox ($GLOBALS['SOBE']->pageTitle, $msg, $buttons, 1);
+			$content .= '<input type="hidden" name="folder" value="'.$this->folder['dir_path_absolute'].'" />
+					<input type="hidden" name="data[delete_confirmed]" value="1" />';
 
 		}
 
